V6.5.1
* Support for McMMOHorses Added. You dont get a reward for killing MCHorses
* Added New Achievement. Neptune - King of the seas. Kill a Mob using a Trident over 20 blocks
* Re-added Setting "drop_money_use_item_as_currency" to the config.yml. This was deleted in V6.5.0. 
V6.5.0
* Updated to bStats 1.4
* MobHunting and BagOfGold is not dependend on each other anymore.
* Recompiled MobHunting against Worldguard 7.0.0 Beta 2. You MUST upgrade Worldguard to V7.0.0 Beta 2 if you use the MobHunting Flag. (https://dev.bukkit.org/projects/worldguard/files)
* If you use my other plugin BagOfGold, you must upgrade that too. 
V6.0.8
* Moved Spawner settings from general section to grinding section in config.yml. Please review the Spawner settings after first run.
* Recompiled MobHunting against Worldguard 7.0.0 Beta 1. You MUST upgrade Worldguard to V7.0.0 Beta 1 if you use the MobHunting Flag. (https://dev.bukkit.org/projects/worldguard/files) 
V6.0.7
* Fixed compatibility issues with plugins adding new recipes. (Ex EmeraldTools)
* Added a per world bonus on request from a server owner. The default bonus is 1 (neutral/disabled) 
V6.0.6
* Fixed ticket 443 (https://github.com/Rocologo/MobHunting/issues/443)
* Rounding fixed
* Reward for PVP kills can max be the players balance, if rob_from_victim is enabled. If the killed player has 0 money, the reward will be zero to.
* Added a limit of gold per BagOfGold, default 10000 (Notice that you need to set the limit in both BagOfGold and MobHunting at the moment).
* Added a limit on how much gold the player can drop, give and take using /mh money .... the limit is 100 bags
V6.0.5
* Use org.Bukkit.SendTitle instead of using TitleManager and TitleAPI. 
* Use player.spawnParticle instead of using ProtocolLib 
* Fixed Ticked 432. ${prize} not working when creating a bount on a player.
* Fixed ticket 437. Stacked heads sold with BagOfGOld sign was counted as one head.