@@ -6,8 +6,8 @@
 	<groupId>one.lindegaard</groupId>
 	<artifactId>MobHunting</artifactId>
 	<packaging>jar</packaging>
-	<!-- <version>6.5.1</version> -->
-	<version>6.5.1-SNAPSHOT-B${build.number}</version>
+	<version>6.5.1</version>
+	<!-- <version>6.5.1-SNAPSHOT-B${build.number}</version> -->
 	<name>MobHunting</name>
 	<url>https://www.spigotmc.org/resources/mobhunting.3582/</url>
 	<description>MobHunting adds a new level of fun to hunting monsters. Now you can get money from kills, get bonuses for skilled and creative kills, and get special achievements!</description>
@@ -49,7 +49,7 @@
 		<mavenJarPlugin.version>3.1.0</mavenJarPlugin.version>
 		<mavenShadePlugin.version>3.1.1</mavenShadePlugin.version>
 
-		<bagofgold.version>2.5.1</bagofgold.version>
+		<bagofgold.version>2.5.2</bagofgold.version>
 
 		<vault.version>1.6.6</vault.version>
 		<bstats.version>1.4</bstats.version>
